kubernetes/react-website/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-website
spec:
  selector:
    matchLabels:
      app: react-website
  template:
    metadata:
      labels:
        app: react-website
    spec:
      containers:
        - image: videlaacr.azurecr.io/frontend:latest
          name: frontend
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 3000
              #name: reactport
        - image: videlaacr.azurecr.io/backend:latest
          name: backend
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 3001
              #name: nodejsport
