kubernetes/react-website/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-service
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
      name: react_port
  selector:
    app: react-website
  type: ClusterIP
