kubernetes/react-website/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: react-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - host: react-website
      http:
        paths:
          - backend:
              serviceName: react-service
              servicePort: 80
            path: /
